@@ -1,0 +1,105 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+
+	<!-- Configuration -->
+	<CommandClass id="112">
+
+		<Value type="list" genre="config" instance="1" index="1" label="Fibaro Smoke Sensor sensitivity" min="1" max="3" value="2" size="1">
+			<Help>There are 3 levels of sensitivity to smoke presence. Level 1 means the highest sensitivity. Rising the parameter value lowers the sensitivity to smoke presence.</Help>
+			<Item label="HIGH Sensitivity" value="1" />
+			<Item label="MEDIUM Sensitivity" value="2" />
+			<Item label="LOW Sensitivity" value="3" />
+		</Value>
+
+		<Value type="list" genre="config" instance="1" index="2" label="Z-Wave notifications status" min="0" max="3" value="0"  size="1">
+			<Help>This parameter allows to activate excess temperature and/or enclosure opening notifications sent to the main controller.</Help>
+			<Item label="all notifications disabled" value="0" />
+			<Item label="enclosure opening notification enabled" value="1" />
+			<Item label="exceeding temperature threshold notification enabled" value="2" />
+			<Item label="all notifications enabled" value="3" />
+		</Value>
+
+		<Value type="list" genre="config" instance="1" index="3" label="Visual indicator notifications status" min="0" max="7" value="0"  size="1">
+			<Help>This parameter allows to activate visual indications but does not apply to major alarms, such as FIRE, TROUBLE and LOW BATTERY ALARM.</Help>
+			<Item label="all notifications disabled" value="0" />
+			<Item label="enclosure opening notification enabled" value="1" />
+			<Item label="exceeding temperature threshold notification enabled" value="2" />
+			<Item label="enclosure opening and exceeding temperature threshold notifications enabled" value="3" />
+			<Item label="lack of Z-Wave range notification" value="4" />
+			<Item label="enclosure opening and lack of Z-Wave range notifications enabled" value="5" />
+			<Item label="exceeding temperature threshold and lack of Z-Wave range notifications enabled" value="6" />
+			<Item label="all notifications enabled" value="7" />
+		</Value>
+
+		<Value type="list" genre="config" instance="1" index="4" label="Sound notifications status" min="0" max="7" value="0"  size="1">
+			<Help>This parameter allows to activate sound signals but does not apply to major alarms, such as FIRE, TROUBLE and LOW BATTERY ALARM.</Help>
+			<Item label="all notifications disabled" value="0" />
+			<Item label="enclosure opening notification enabled" value="1" />
+			<Item label="exceeding temperature threshold notification enabled" value="2" />
+			<Item label="enclosure opening and exceeding temperature threshold notifications enabled" value="3" />
+			<Item label="lack of Z-Wave range notification" value="4" />
+			<Item label="enclosure opening and lack of Z-Wave range notifications enabled" value="5" />
+			<Item label="exceeding temperature threshold and lack of Z-Wave range notifications enabled" value="6" />
+			<Item label="all notifications enabled" value="7" />
+		</Value>
+
+		<Value type="list" genre="config" instance="1" index="10" label="Configuration of control frames in BASIC command class" min="0" max="2" value="0" size="1">
+			<Help>This parameter defines which frames will be sent in the 2-nd Association Group (FIRE ALARM).</Help>
+			<Item label="BASIC ON - BASIC OFF enabled" value="0" />
+			<Item label="BASIC ON enabled" value="1" />
+			<Item label="BASIC OFF enabled" value="2" />
+		</Value>
+
+		<Value type="byte" genre="config" instance="1" index="11" label="BASIC ON frame value" min="0" max="255" value="255">
+			<Help>BASIC ON frame is sent in case of smoke presence detection and FIRE ALARM triggering. Available settings: (1 - 99) or 255. Default setting: 255</Help>
+		</Value>
+
+		<Value type="byte" genre="config" instance="1" index="12" label="BASIC OFF frame value" min="0" max="255" value="0">
+			<Help>BASIC OFF frame is sent in case of FIRE ALARM cancellation. Available settings: (1 - 99) or 255. Default setting: 255</Help>
+		</Value>
+
+		<Value type="list" genre="config" instance="1" index="13" label="Alarm broadcast" min="0" max="4" value="0" size="1">
+			<Help>A value other than 0 means that alarms are being sent in broadcast mode, i.e. to all devices within a Fibaro Smoke Sensor's range.</Help>
+			<Item label="Broadcasts INACTIVE" value="0" />
+			<Item label="Smoke ACTIVE, tamper INACTIVE" value="1" />
+			<Item label="Smoke INACTIVE, tamper ACTIVE" value="2" />
+			<Item label="Smoke ACTIVE, tamper ACTIVE" value="3" />
+		</Value>
+
+		<Value type="byte" genre="config" instance="1" index="20" label="Temperature report interval"  value="1" min="0" max="8640" size="2">
+			<Help>Time interval between consecutive temperature reports. Report is sent when new temperature value is different from the one previously reported - according to the set hysteresis (parameter 21). Available settings: 0,1-8640 (multiply by 10 seconds) [10s-24h]. Default setting: 1 (10s)</Help>
+		</Value>
+
+		<Value type="byte" genre="config" instance="1" index="21" label="Temperature report hysteresis"  value="10" min="1" max="100" size="1">
+			<Help>The temperature report will only be sent if there is a difference in temperature value from the previous value reported, defined in this parameter (hysteresis). Available settings: 1 – 100 (in 0,1°C steps). Default setting: 10 (1°C)</Help>
+		</Value>
+
+		<Value type="byte" genre="config" instance="1" index="30" label="Temperature threshold"  value="55" min="1" max="100" size="1">
+			<Help>Temperature value measured by the built-in temperature sensor above which the excess temperature notification is sent. Available settings: 1 – 100. Default setting: 55 (55°C)</Help>
+		</Value>
+
+		<Value type="short" genre="config" instance="1" index="31" label="Excess temperature signaling interval"  value="1" min="1" max="8640" size="2">
+			<Help>Time interval of signaling (visual indication/sound) excess temperature level. Available settings: 1 – 8640 (multiply by 10 seconds) [10s-24h]. Default setting: 1 (10s)</Help>
+		</Value>
+
+		<Value type="short" genre="config" instance="1" index="32" label="Lack of Z-Wave range indication interval"  value="180" min="1" max="8640" size="2">
+			<Help>Time interval of signaling (visual indication/sound) lack of Z-Wave range. Available settings: 1 – 8640 (multiply by 10 seconds) [10s-24h]. Default setting: 180 (30min)</Help>
+		</Value>
+	</CommandClass>
+
+	 <!-- Basic set as report -->
+	 <CommandClass id="32" setasreport="true"/>
+
+	<!-- Association Groups -->
+	<CommandClass id="133">
+		<Associations num_groups="5">
+			<Group index="1" max_associations="1" label="Lifeline" auto="true"/>
+			<Group index="2" max_associations="5" label="Fire Alarm" auto="false" />
+			<Group index="3" max_associations="5" label="Tamper" auto="false"/>
+			<Group index="4" max_associations="5" label="Fire Alarm Report" auto="true"/>
+			<Group index="5" max_associations="5" label="Tamper Report" auto="true"/>
+		</Associations>
+	</CommandClass>
+
+</Product>
