@@ -105,6 +105,7 @@ Version 1.3
  - Fixed issue 470 - Qubino ZMNHDA2 device update thanks to kvervloesem (Alex)
  - Fixed Issue 462 - Fix Builds on FreeBSD - From Stromnet (Justin)
  - Added Vision Z-Wave USB Stick device thanks to GizMoCuz (Alex)
+ - Fixed issue 469 - Added Fibaro Smoke Detector FGSD-002 thanks to tmartine (Alex)
 
 Version 1.2 
  - Released on 15/10/14
